2006-01-12 [paul]	1.9.100cvs139

	* src/mainwindow.c
		append 'Change folder order' label with '...'
	* src/prefs_actions.c
		allow reordering of actions list by dnd
	* src/gtk/foldersort.c
		make the dialog nicer

2006-01-11 [colin]	1.9.100cvs138

	* src/compose.c
		Allow templates without text

2006-01-11 [paul]	1.9.100cvs137

	* tools/README
	* tools/filter_conv_new.pl
		add info to README
		also check .sylpheed for filter.xml
		be a bit informative to the user

2006-01-11 [colin]	1.9.100cvs136

	* src/textview.c
		Fix bug #888 (2.0.0rc3 not displaying image in message view)

2006-01-10 [paul]	1.9.100cvs135

	* tools/Makefile.am
	* tools/filter_conv_new.pl
		add script to convert new style Sylpheed
		filter rules (Sylpheed >= 0.9.99) to
		Claws filtering rules

2006-01-10 [colin]	1.9.100cvs134

	* src/compose.c
		Fix broken line joins in certain conditions
		(between two quoted lines: <enter><enter><up>
		 <type a wrapped sentence><go in the first line>
		 <insert more text><watch as line joining failed>)

2006-01-10 [paul]	1.9.100cvs133

	* src/compose.c
		don't report success in error dialog
		thanks to Colin
	* src/common/utils.c
		include some trailing punctuations as URI
		thanks to Hiro

2006-01-10 [paul]	1.9.100cvs132

	* src/mimeview.c
		fix incompatible pointer type
		warning

2006-01-10 [paul]	1.9.100cvs131

	* src/compose.c
		change Subject in window title
		instantaneously

2006-01-09 [colin]	1.9.100cvs130

	* src/addressbook.c
	* src/headerview.c
	* src/mainwindow.c
	* src/messageview.c
	* src/mimeview.c
	* src/noticeview.c
	* src/summaryview.c
		Fix possible crashes on exit and in addressbook

2006-01-09 [paul]	1.9.100cvs129

	* src/prefs_msg_colors.c
		some cleanups that I forgot last time

2006-01-09 [paul]	1.9.100cvs128

	* README
	* src/folderview.c
	* src/prefs_msg_colors.c
		add previously hidden option, color_new, to
		the gui
		move the page to Display/
		rework the gui

2006-01-09 [wwp]	1.9.100cvs127

	* src/prefs_themes.c