@@ -573,6 +573,8 @@ struct _FolderClass
 						 FolderItem	*item,
 						 gboolean	 batch);
 	void		(*synchronise)		(FolderItem	*item);
+	gboolean	(*subscribe)		(Folder 	*folder,
+						 const gchar	*uri);
 };
 
 struct _FolderItem
@@ -816,4 +818,5 @@ void folder_item_process_open		(FolderItem *item,
 					 void (*before_proc_func)(gpointer data),
 					 void (*after_proc_func)(gpointer data),
 					 gpointer data);
+gboolean folder_subscribe		(const gchar *uri);
 #endif /* __FOLDER_H__ */
